manifests/messenger-bluegreen/02-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: messenger-preview
  namespace: messenger
  labels:
    app: messenger
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: messenger

---
apiVersion: v1
kind: Service
metadata:
  name: messenger
  namespace: messenger
  labels:
    app: messenger
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: messenger
